# sparkfun_ism330dhcx_interface

./: .gitignore  CMakeLists.txt  README.md  main.cpp  windows_notes.md
driver/: i2c-ch341-usb.c
include/: Wire.h  gyro.h
include/platform/linux/: TwoWire_linux.h
include/platform/windows/: TwoWire_windows.h  ch341_wrapper.h
include/sensor_api/: SparkFun_ISM330DHCX.h  sfe_bus.h
python_minimal/: README.md  __init__.py  debug_read.py  requirements.txt  test_oneliner.py  test_optimized.py  test_sensor.py  test_simple.py  test_streaming.py  twowire_linux.py  twowire_windows.py  wire.py
src/: gyro.cpp
src/platform/windows/: ch341_wrapper.cpp
src/sensor_api/: sfe_bus.cpp
tests/: CMakeLists.txt  test_ch341.cpp  test_dll_functions.cpp  test_simple_unified.cpp  test_unified_api.cpp
